- Lasergroup theme js/css/imkages resources inclusion. - moved #loghi into style.css

--- a/src/Themes/Lasergroup/Views/Document.cshtml
+++ b/src/Themes/Lasergroup/Views/Document.cshtml
@@ -17,7 +17,7 @@
     Style.Include("styles.css", "style.premedia.min.css").AtHead();
     Style.Include("slick.css", "style.premedia.min.css").AtHead();
 
-    Style.Include("style.css?v=3", "style.premedia.min.css").AtHead();
+    Style.Include("style.css?v=3", "style.premedia.min.css?v=3").AtHead();
 
     Style.Include("style.media.min768.css?v=3", "style.media.min768.min.css?v=3")
         .SetAttribute("media", "(min-width:768px)")
