--- a/src/Themes/Lasergroup/Views/Document.cshtml
+++ b/src/Themes/Lasergroup/Views/Document.cshtml
@@ -14,8 +14,8 @@
     Script.Include("slick.js", "head.deferred.min.js")
         .SetAttribute("defer", "").AtHead();
 
-    Style.Include("styles.css", "style.premedia.min.css").AtHead();
-    Style.Include("slick.css", "style.premedia.min.css").AtHead();
+    Style.Include("styles.css", "style.premedia.min.css?v=3").AtHead();
+    Style.Include("slick.css", "style.premedia.min.css?v=3").AtHead();
 
     Style.Include("style.css?v=3", "style.premedia.min.css?v=3").AtHead();
 
