--- a/src/Modules/Laser.Orchard.Questionnaires/Views/EditorTemplates/AnswerEditModel.cshtml
+++ b/src/Modules/Laser.Orchard.Questionnaires/Views/EditorTemplates/AnswerEditModel.cshtml
@@ -10,7 +10,7 @@
     <td class="answer-text">
         <div>
             @Html.HiddenFor(x => x.Id)
-            @Html.HiddenFor(x => x.Identifier)
+            @Html.HiddenFor(x => x.GUIdentifier)
             @Html.HiddenFor(x => x.Position, new { @class = "answers-position-field" })
             @Html.HiddenFor(x => x.Delete, new { @class = "mark-for-delete" })
             @Html.HiddenFor(x => x.QuestionRecord_Id)
