Added style="clear:both" to tables in report dashboards

--- a/src/Modules/Laser.Orchard.Reporting/Views/Report/ShowDashboard.cshtml
+++ b/src/Modules/Laser.Orchard.Reporting/Views/Report/ShowDashboard.cshtml
@@ -38,7 +38,7 @@
     <div>
         @foreach (var rep in Model.Reports.AsPart<DataReportViewerPart>()) {
             if (rep.Record.ChartType == 7) {
-                <div data-report-id="@rep.Record.Id"></div>
+                <div style="clear:both;" data-report-id="@rep.Record.Id"></div>
             } else {
                 <div style="float:left" data-report-id="@rep.Record.Id"></div>
             }
